--- a/jaksim_ios/Home/Base.lproj/Main.storyboard
+++ b/jaksim_ios/Home/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="LRP-uB-sew">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
@@ -12,7 +12,7 @@
         <!--Home View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="HomeViewController" customModule="jaksim_ios" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="HomeViewController" id="BYZ-38-t0r" customClass="HomeViewController" customModule="jaksim_ios" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
@@ -23,7 +23,7 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="7D6-LW-1Hz"/>
                                 </constraints>
-                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MF0-VV-pBd">
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="MF0-VV-pBd">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
@@ -40,45 +40,79 @@
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rYy-d9-s4I">
-                                <rect key="frame" x="0.0" y="327" width="414" height="128"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="rYy-d9-s4I">
+                                <rect key="frame" x="0.0" y="354" width="414" height="150"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BhG-GC-FT6">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="zJC-DO-wps"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="BhG-GC-FT6">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="rFA-bl-Nzn">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="CategoryListCollectionViewCell" id="rFA-bl-Nzn" customClass="CategoryListCollectionViewCell" customModule="jaksim_ios" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="uA8-Ij-Ztj">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="XQr-Pc-h29">
+                                                    <rect key="frame" x="48" y="47" width="32" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="XQr-Pc-h29" firstAttribute="centerY" secondItem="uA8-Ij-Ztj" secondAttribute="centerY" id="ZTE-uB-SmD"/>
+                                                <constraint firstItem="XQr-Pc-h29" firstAttribute="centerX" secondItem="uA8-Ij-Ztj" secondAttribute="centerX" id="gbJ-M2-ASQ"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <color key="backgroundColor" systemColor="systemPinkColor"/>
+                                        <connections>
+                                            <outlet property="textField" destination="XQr-Pc-h29" id="Vz8-58-zzU"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
-                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iNZ-b7-0ev">
-                                <rect key="frame" x="0.0" y="548" width="414" height="215"/>
-                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="iNZ-b7-0ev">
+                                <rect key="frame" x="0.0" y="564" width="414" height="200"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                                <collectionViewFlowLayout key="collectionViewLayout" automaticEstimatedItemSize="YES" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cmd-2n-8f3">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="200" id="4xj-AT-Jio"/>
+                                </constraints>
+                                <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="cmd-2n-8f3">
                                     <size key="itemSize" width="128" height="128"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
-                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="RR1-rW-jGu">
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="RecommendedMeetingListCollectionViewCell" id="RR1-rW-jGu" customClass="RecommendedMeetingListCollectionViewCell" customModule="jaksim_ios" customModuleProvider="target">
                                         <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="bmX-9f-ChM">
                                             <rect key="frame" x="0.0" y="0.0" width="128" height="128"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="P8A-4X-Wok">
+                                                    <rect key="frame" x="48" y="47" width="32" height="34"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                    <textInputTraits key="textInputTraits"/>
+                                                </textField>
+                                            </subviews>
+                                            <color key="backgroundColor" systemColor="systemGreenColor"/>
+                                            <constraints>
+                                                <constraint firstItem="P8A-4X-Wok" firstAttribute="centerY" secondItem="bmX-9f-ChM" secondAttribute="centerY" id="4Nk-M8-tbH"/>
+                                                <constraint firstItem="P8A-4X-Wok" firstAttribute="centerX" secondItem="bmX-9f-ChM" secondAttribute="centerX" id="EGv-xw-e9B"/>
+                                            </constraints>
                                         </collectionViewCellContentView>
+                                        <connections>
+                                            <outlet property="textField" destination="P8A-4X-Wok" id="bNc-8P-zkR"/>
+                                        </connections>
                                     </collectionViewCell>
                                 </cells>
                             </collectionView>
@@ -86,12 +120,20 @@
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="iNZ-b7-0ev" secondAttribute="bottom" constant="49" id="2bk-uj-102"/>
+                            <constraint firstItem="rYy-d9-s4I" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="5xY-1I-fzG"/>
+                            <constraint firstItem="iNZ-b7-0ev" firstAttribute="top" secondItem="rYy-d9-s4I" secondAttribute="bottom" constant="60" id="982-3u-obf"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="iNZ-b7-0ev" secondAttribute="trailing" id="DDu-HI-Bac"/>
+                            <constraint firstItem="iNZ-b7-0ev" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="LCu-wK-maz"/>
                             <constraint firstItem="dRc-g8-bux" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="LYH-yf-Gnn"/>
                             <constraint firstItem="dRc-g8-bux" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="RWE-6x-bkU"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="dRc-g8-bux" secondAttribute="trailing" id="VdD-Fb-VSg"/>
-                            <constraint firstItem="dRc-g8-bux" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="yai-OL-E1b"/>
+                            <constraint firstItem="dRc-g8-bux" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="100" id="hju-PK-vXv"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="rYy-d9-s4I" secondAttribute="trailing" id="pY3-6l-78U"/>
+                            <constraint firstItem="rYy-d9-s4I" firstAttribute="top" secondItem="dRc-g8-bux" secondAttribute="bottom" constant="60" id="stl-Fk-Qml"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" systemItem="mostViewed" id="4eu-64-4n7"/>
                     <connections>
                         <outlet property="CategoryListCollectionView" destination="rYy-d9-s4I" id="THj-eO-1Fi"/>
                         <outlet property="MeetingListCollectionView" destination="dRc-g8-bux" id="1fm-e6-isv"/>
@@ -100,12 +142,69 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="1142" y="94"/>
+        </scene>
+        <!--ProfileViewController-->
+        <scene sceneID="RWF-j6-DCC">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Profile" referencedIdentifier="ProfileViewController" id="eqA-20-2jz" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="4Sx-fv-fhg"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="GMF-N9-EWX" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1141" y="688"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="LfN-8c-6ph">
+            <objects>
+                <tabBarController automaticallyAdjustsScrollViewInsets="NO" id="LRP-uB-sew" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="Luf-jA-1eq">
+                        <rect key="frame" x="0.0" y="0.0" width="1000" height="1000"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="Q8W-BV-IGv"/>
+                        <segue destination="qHO-Ru-mks" kind="relationship" relationship="viewControllers" id="odl-mI-3NX"/>
+                        <segue destination="RwY-pQ-ncV" kind="relationship" relationship="viewControllers" id="NaT-J3-LuZ"/>
+                        <segue destination="eqA-20-2jz" kind="relationship" relationship="viewControllers" id="xmr-U4-MYi"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="lkJ-vn-ccR" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
             <point key="canvasLocation" x="111.59420289855073" y="93.75"/>
+        </scene>
+        <!--SearchingViewController-->
+        <scene sceneID="pkS-vW-msd">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Searching" referencedIdentifier="SearchingViewController" id="RwY-pQ-ncV" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="dUg-xf-f00"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="NZP-JB-xpu" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1141" y="601"/>
+        </scene>
+        <!--MeetingViewController-->
+        <scene sceneID="dg9-X0-AcF">
+            <objects>
+                <viewControllerPlaceholder storyboardName="Meeting" referencedIdentifier="MeetingViewController" id="qHO-Ru-mks" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="Item" id="c7t-yB-fI9"/>
+                </viewControllerPlaceholder>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="nsX-GX-m7n" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1141" y="514"/>
         </scene>
     </scenes>
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemPinkColor">
+            <color red="1" green="0.17647058823529413" blue="0.33333333333333331" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
